// Copyright (c) 2023 - 2025 Restate Software, Inc., Restate GmbH.
// All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "restate/common.proto";
import "google/protobuf/timestamp.proto";

package restate.net.metadata;

message MetadataMessage {
  enum MessageKind {
    UNKNOWN = 0;
    Get = 1;
    Update = 2;
  }

  MessageKind message_kind = 1;

  restate.common.MetadataKind metadata_kind = 2;

  // optional if message_kind == Get
  optional uint32 min_version = 3;

  // opaque metadata payload in flexbuffer format
  // required if message_kind == Update
  // todo: Model all metadata types with protobuf schema
  optional bytes payload = 4;
}